styles.css
:root {
  --clr-neutral-900: hsl(220 50 17);
  --clr-neutral-400: hsl(221 21 46);
  --clr-neutral-200: hsl(198 28 93);
  --clr-neutral-0: hsl(0 0 100);

  --clr-orange-500: hsl(22 89 52);
  --clr-orange-300: hsl(22 100 69);
}

/* fonts */

body {
  font-family: "Barlow", sans-serif;
  font-size: 1rem;
  font-weight: 500;
  color: var(--clr-neutral-400);
  overflow-x: clip;
}

h1,
h2,
h3,
a,
span {
  text-transform: uppercase;
}

h1,
h2,
h3 {
  font-weight: 900;
  color: var(--clr-neutral-900);
  margin-block-end: 1.5rem;
}

span,
a {
  font-weight: 700;
}

h1 {
  font-size: clamp(3rem, 2.167rem + 2.778vw, 3.5rem);
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

/* === LAYOUTS === */

.page-grid {
  --page-padding: clamp(1rem, -0.667rem + 5.556vw, 2rem);
  --content-max-width: 1110px;

  display: grid;
  grid-template-columns:
    minmax(var(--page-padding), 1fr)
    [content-start]
    min(100% - (var(--page-padding) * 2), var(--content-max-width))
    [content-end]
    minmax(var(--page-padding), 1fr);

  > * {
    grid-column: content;
  }
}

/* mobile */

.content-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  column-gap: 2rem;
}

section {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;

  > * {
    grid-column: 1 / -1;
  }
}

.hero {
  row-gap: 4rem;
}

.gallery {
  row-gap: 4rem;

  .image-wrapper {
    grid-column: span 1;
  }

  img:nth-child(2) {
    grid-column: span 2;
  }
}

.features {
  row-gap: 2rem;
}

.section-copy {
  align-self: center;
}

.sidebar {
  display: grid;
  grid-template-columns: subgrid;

  > * {
    grid-column: 1 / -1;
  }
}

/* tablet */

@media (min-width: 750px) {
  .content-grid {
    grid-template-columns: repeat(6, 1fr);
  }

  .hero > * {
    grid-column: span 3;
  }

  .gallery {
    .image-wrapper {
      grid-column: span 2;
    }

    img:nth-child(2) {
      grid-column: span 4;
    }
  }

  .features > * {
    grid-column: span 3;
  }

  .sidebar {
    > :first-child {
      grid-column: span 2;
    }

    > :last-child {
      grid-column: span 4;
      margin-left: 2rem;
    }
  }
}

/* desktop */

@media (min-width: 1024px) {
  .content-grid {
    grid-template-columns: repeat(4, 1fr);
  }

  .hero > * {
    grid-column: span 2;
  }

  .gallery {
    .image-wrapper {
      grid-column: span 1;
    }

    img:nth-child(2) {
      grid-column: span 2;
      width: 445px;
    }

    .sidebar {
      grid-column: span 1;

      > :last-child {
        margin-left: 0;
      }
    }
  }

  .features > * {
    grid-column: span 1;
  }
}

/* === COMPONENTS === */

header {
  display: flex;
  justify-content: space-between;
  padding-block-start: clamp(1.5rem, 0.618rem + 2.941vw, 2.5rem);
}

footer {
  text-align: center;
  padding-block-end: clamp(1.5rem, 0.618rem + 2.941vw, 2.5rem);
}

.hero {
  margin-block-start: clamp(2.5rem, 0.294rem + 7.353vw, 5rem);
  margin-block-end: clamp(1.5rem, 0.618rem + 2.941vw, 2.5rem);

  p {
    font-size: clamp(1rem, 0.792rem + 0.694vw, 1.125rem);
  }
}

.features {
  margin-block: clamp(4rem, 2.25rem + 5.833vw, 7.5rem);
  grid-auto-rows: 65px 53px auto; /* since the amount of rows are dynamic due to switching layouts*/
}

article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 3;

  .icon-wrapper {
    order: -1;
    background-color: var(--clr-orange-500);
    justify-self: flex-start;
    width: 65px;
    height: 65px;
    border-radius: 1rem;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 0.5rem;
    margin-block-end: clamp(2rem, 0.333rem + 5.556vw, 3rem);
  }
}

.cta-group {
  margin-block-start: clamp(2rem, 1.167rem + 2.778vw, 2.5rem);
  display: flex;
  gap: clamp(1.5rem, -1.5rem + 6.25vw, 2.5rem);
  align-items: center;
  flex-wrap: wrap;
}

a {
  --button-color: var(--clr-orange-500);
  --button-color-hover: var(--clr-orange-300);
  --button-text: var(--clr-neutral-0);
  --button-text-hover: var(--clr-neutral-0);

  padding-block: 1rem;
  padding-inline: 1.5rem;
  background-color: var(--button-color);
  color: var(--button-text);
  border-radius: 0.5rem;
  transition:
    background 200ms ease-in,
    color 200ms ease-in;

  &:hover {
    background-color: var(--button-color-hover);
    color: var(--button-text-hover);
  }

  &:focus-visible {
    outline: 2px solid var(--clr-neutral-0);
    outline-offset: -4px;
  }

  &[data-variant="secondary"] {
    --button-color: var(--clr-neutral-200);
    --button-color-hover: var(--clr-neutral-900);
    --button-text: var(--clr-neutral-900);
    --button-text-hover: var(--clr-neutral-0);

    &:focus-visible {
      outline: 2px solid var(--clr-neutral-900);
      outline-offset: 0;
    }
  }
}

.image-wrapper {
  position: relative;

  img {
    height: 100%;
    object-fit: cover;
  }

  &::before {
    content: "";
    position: absolute;
    inset: 0;
    background-color: var(--clr-orange-500);
    mix-blend-mode: multiply;
    border-radius: 1.25rem;
  }
}

.hero-image,
.section-image {
  border-radius: 1.25rem;
}

/* === UTILITIES === */

/* === EXCEPTIONS === */

[data-pattern] {
  --pattern-width: 255px;

  position: relative;

  &::before {
    content: "";
    position: absolute;
    background-image: url("assets/icons/pattern-square.svg");
    background-repeat: no-repeat;
    width: var(--pattern-width);
    height: 240px;
  }
}

[data-pattern="top-right"]::before {
  right: calc(0px - var(--pattern-width) - 2rem);
}

[data-pattern="bottom-left"]::before {
  left: calc(0px - var(--pattern-width) - 2rem);
  bottom: 0;
}

